Inverse used unnecessarily in exponential function...

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:2dc52a876b7f871311a4038e09ae1df8e7e925cf416833aeeb644ca46776d107"
+  "signature": "sha256:de739b2a447efd13cdaa0f030fb35edc3205fe42e7e58b269873798901ffdc1d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +18,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
       "include(\"events.jl\")\n",
       "include(\"population.jl\")"
@@ -46,7 +46,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
       "pop_db1 = create_pop_db(50, MvNormal(eye(2).*2))\n",
       "dist_mat1 = create_dist_mtx(pop_db1)"
@@ -60,32 +60,32 @@
        "prompt_number": 2,
        "text": [
         "50x50 Array{Float64,2}:\n",
-        " 0.0        1.87991   1.66534   0.282443  \u2026  3.64338    0.0361048  2.26094  \n",
-        " 1.87991    0.0       0.214575  2.16236      1.76346    1.84381    0.381028 \n",
-        " 1.66534    0.214575  0.0       1.94778      1.97804    1.62923    0.595603 \n",
-        " 0.282443   2.16236   1.94778   0.0          3.92582    0.318548   2.54338  \n",
-        " 0.0856799  1.79423   1.57966   0.368123     3.5577     0.0495751  2.17526  \n",
-        " 2.453      0.573089  0.787664  2.73544   \u2026  1.19038    2.4169     0.192061 \n",
-        " 2.29369    4.1736    3.95902   2.01124      5.93706    2.32979    4.55463  \n",
-        " 1.4555     0.424416  0.209841  1.73794      2.18788    1.41939    0.805444 \n",
-        " 0.173085   2.053     1.83842   0.109358     3.81646    0.20919    2.43403  \n",
-        " 1.78681    3.66672   3.45214   1.50436      5.43018    1.82291    4.04775  \n",
-        " 2.3919     0.511983  0.726558  2.67434   \u2026  1.25148    2.35579    0.130956 \n",
-        " 2.34804    0.468123  0.682698  2.63048      1.29534    2.31193    0.0870957\n",
-        " 4.21743    2.33751   2.55209   4.49987      0.574049   4.18132    1.95649  \n",
-        " \u22ee                                        \u22f1                                 \n",
-        " 4.70054    2.82063   3.0352    4.98298      1.05716    4.66443    2.4396   \n",
-        " 1.06023    0.819687  0.605112  1.34267      2.58315    1.02412    1.20071  \n",
-        " 3.394      1.51408   1.72866   3.67644   \u2026  0.249382   3.35789    1.13305  \n",
-        " 0.484821   1.39509   1.18052   0.767265     3.15856    0.448716   1.77612  \n",
-        " 1.0191     2.89901   2.68443   0.736652     4.66247    1.0552     3.28004  \n",
-        " 0.74708    2.62699   2.41242   0.464637     4.39046    0.783185   3.00802  \n",
-        " 3.54659    1.66668   1.88126   3.82904      0.0967825  3.51049    1.28565  \n",
-        " 2.49028    0.610368  0.824943  2.77272   \u2026  1.1531     2.45418    0.22934  \n",
-        " 2.3458     4.22571   4.01113   2.06335      5.98917    2.3819     4.60674  \n",
-        " 3.64338    1.76346   1.97804   3.92582      0.0        3.60727    1.38244  \n",
-        " 0.0361048  1.84381   1.62923   0.318548     3.60727    0.0        2.22484  \n",
-        " 2.26094    0.381028  0.595603  2.54338      1.38244    2.22484    0.0      "
+        " 0.0       0.76861    4.82642  2.79158   \u2026  0.748688   1.62748    0.500371\n",
+        " 0.76861   0.0        4.05781  2.02297      1.5173     2.39609    1.26898 \n",
+        " 4.82642   4.05781    0.0      2.03484      5.57511    6.4539     5.32679 \n",
+        " 2.79158   2.02297    2.03484  0.0          3.54027    4.41906    3.29195 \n",
+        " 2.10737   2.87598    6.93379  4.89895      1.35868    0.479884   1.607   \n",
+        " 0.698087  1.4667     5.52451  3.48967   \u2026  0.0506007  0.929395   0.197717\n",
+        " 0.527873  0.240736   4.29854  2.26371      1.27656    2.15536    1.02824 \n",
+        " 0.242657  0.525952   4.58376  2.54892      0.991345   1.87014    0.743028\n",
+        " 0.578626  0.189984   4.24779  2.21295      1.32731    2.20611    1.079   \n",
+        " 2.5327    1.76409    2.29372  0.258876     3.28139    4.16019    3.03307 \n",
+        " 3.15709   3.9257     7.98351  5.94867   \u2026  2.40841    1.52961    2.65672 \n",
+        " 0.254968  1.02358    5.08139  3.04655      0.49372    1.37251    0.245402\n",
+        " 0.899783  1.66839    5.7262   3.69136      0.151095   0.7277     0.399412\n",
+        " \u22ee                                       \u22f1                                \n",
+        " 1.7021    0.933486   3.12432  1.08948      2.45078    3.32958    2.20247 \n",
+        " 1.63619   0.867577   3.19023  1.15539      2.38487    3.26367    2.13656 \n",
+        " 1.0128    1.78141    5.83921  3.80438   \u2026  0.264108   0.614687   0.512425\n",
+        " 1.86068   1.09207    2.96574  0.930902     2.60937    3.48816    2.36105 \n",
+        " 0.560512  0.208098   4.26591  2.23107      1.3092     2.18799    1.06088 \n",
+        " 1.35111   0.582502   3.47531  1.44047      2.0998     2.97859    1.85148 \n",
+        " 1.67412   2.44273    6.50054  4.4657       0.925431   0.0466365  1.17375 \n",
+        " 0.710083  0.0585262  4.11633  2.0815    \u2026  1.45877    2.33757    1.21045 \n",
+        " 0.279966  0.488644   4.54645  2.51161      1.02865    1.90745    0.780337\n",
+        " 0.748688  1.5173     5.57511  3.54027      0.0        0.878795   0.248317\n",
+        " 1.62748   2.39609    6.4539   4.41906      0.878795   0.0        1.12711 \n",
+        " 0.500371  1.26898    5.32679  3.29195      0.248317   1.12711    0.0     "
        ]
       }
      ],
@@ -100,7 +100,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
       "dist_mat_ab1 = dist_ab_mtx(dist_mat1, 1, 15)"
      ],
@@ -113,32 +113,32 @@
        "prompt_number": 3,
        "text": [
         "50x50 Array{Float64,2}:\n",
-        "   Inf                 7.72564e-5   \u2026       4.33036e21      4.84913e-6 \n",
-        "     7.72564e-5      Inf                    0.000103339     1.93043e6  \n",
-        "     0.000475845       1.06246e10           0.000661077  2374.94       \n",
-        "     1.72198e8         9.46437e-6           2.83382e7       8.2951e-7  \n",
-        "     1.01581e16        0.000155531          3.7243e19       8.65628e-6 \n",
-        "     1.42736e-6     4233.22         \u2026       1.78291e-6      5.60276e10 \n",
-        "     3.90832e-6        4.92424e-10          3.09204e-6      1.32803e-10\n",
-        "     0.00358784   382929.0                  0.00522958     25.6726     \n",
-        "     2.66742e11        2.06144e-5           1.55553e10      1.6037e-6  \n",
-        "     0.000165516       3.43428e-9           0.000122608     7.79473e-10\n",
-        "     2.08385e-6    22970.2          \u2026       2.61787e-6      1.75041e13 \n",
-        "     2.75061e-6    88023.1                  3.47038e-6      7.94414e15 \n",
-        "     4.21005e-10       2.94231e-6           4.78957e-10     4.24472e-5 \n",
-        "     \u22ee                              \u22f1                                  \n",
-        "     8.27533e-11       1.75718e-7           9.29e-11        1.54962e-6 \n",
-        "     0.415934         19.737                0.699408        0.0643286  \n",
-        "     1.09479e-8        0.00198498   \u2026       1.28529e-8      0.153545   \n",
-        " 52032.8               0.00677578      166120.0             0.0001811  \n",
-        "     0.752971          1.16482e-7           0.446661        1.82735e-8 \n",
-        "    79.3398            5.10642e-7          39.0872          6.69558e-8 \n",
-        "     5.66014e-9        0.000470122          6.5991e-9       0.0230748  \n",
-        "     1.13835e-6     1644.85         \u2026       1.41715e-6      3.91555e9  \n",
-        "     2.79027e-6        4.08796e-10          2.21893e-6      1.11969e-10\n",
-        "     3.77954e-9        0.000201605          4.3885e-9       0.00776822 \n",
-        "     4.33036e21        0.000103339        Inf               6.1735e-6  \n",
-        "     4.84913e-6        1.93043e6            6.1735e-6     Inf          "
+        "   Inf               51.8099       \u2026      0.000671823   32405.7        \n",
+        "    51.8099         Inf                   2.02977e-6        0.0280657  \n",
+        "     5.56706e-11      7.50977e-10         7.12304e-13       1.2677e-11 \n",
+        "     2.05235e-7       2.57134e-5          2.08953e-10       1.73062e-8 \n",
+        "     1.39283e-5       1.31287e-7      60667.2               0.000812416\n",
+        "   219.459            0.00319812   \u2026      2.99911           3.6254e10  \n",
+        " 14522.9              1.89181e9           9.93608e-6        0.658501   \n",
+        "     1.67918e9    15339.3                 8.35388e-5       86.0838     \n",
+        "  3664.67             6.59549e10          7.00806e-6        0.319669   \n",
+        "     8.8356e-7        0.000200529         5.16784e-10       5.91229e-8 \n",
+        "     3.24106e-8       1.23378e-9   \u2026      0.00170327        4.31325e-7 \n",
+        "     7.99292e8        0.704995            0.0086546         1.41846e9  \n",
+        "     4.87457          0.000462943       117.683        952106.0        \n",
+        "     \u22ee                             \u22f1                                   \n",
+        "     0.000342958      2.80791             1.45936e-8        7.18391e-6 \n",
+        "     0.000620164      8.42128             1.96973e-8        1.13313e-5 \n",
+        "     0.826361         0.000173204  \u2026   1479.77          22674.7        \n",
+        "     9.01434e-5       0.266843            7.26196e-9        2.53179e-6 \n",
+        "  5905.15             1.6826e10           7.93063e-6        0.412089   \n",
+        "     0.0109555     3315.45                7.75944e-8        9.70974e-5 \n",
+        "     0.000439749      1.5201e-6           9.31346e19        0.090443   \n",
+        "   169.965            3.08845e18   \u2026      2.94132e-6        0.0569869  \n",
+        "     1.96528e8    46250.3                 6.21167e-5       41.283      \n",
+        "    76.8222           0.00192282          6.94527           1.18822e9  \n",
+        "     0.000671823      2.02977e-6        Inf                 0.166148   \n",
+        " 32405.7              0.0280657           0.166148        Inf          "
        ]
       }
      ],
@@ -153,7 +153,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
       "edb = create_event_db(pop_db1, \"SIR\")"
      ],
@@ -209,7 +209,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
       "intial_infect(edb, \"continuous\", 5)"
      ],
@@ -225,32 +225,32 @@
        "prompt_number": 5,
        "text": [
         "50x4 DataFrame\n",
-        "| Row | ind_id | s | i   | r       |\n",
-        "|-----|--------|---|-----|---------|\n",
-        "| 1   | 1      | 0 | NaN | NaN     |\n",
-        "| 2   | 2      | 0 | NaN | NaN     |\n",
-        "| 3   | 3      | 0 | NaN | NaN     |\n",
-        "| 4   | 4      | 0 | NaN | NaN     |\n",
-        "| 5   | 5      | 0 | NaN | NaN     |\n",
-        "| 6   | 6      | 0 | NaN | NaN     |\n",
-        "| 7   | 7      | 0 | NaN | NaN     |\n",
-        "| 8   | 8      | 0 | NaN | NaN     |\n",
-        "| 9   | 9      | 0 | NaN | NaN     |\n",
-        "| 10  | 10     | 0 | NaN | NaN     |\n",
-        "| 11  | 11     | 0 | NaN | NaN     |\n",
+        "| Row | ind_id | s | i   | r      |\n",
+        "|-----|--------|---|-----|--------|\n",
+        "| 1   | 1      | 0 | NaN | NaN    |\n",
+        "| 2   | 2      | 0 | NaN | NaN    |\n",
+        "| 3   | 3      | 0 | NaN | NaN    |\n",
+        "| 4   | 4      | 0 | NaN | NaN    |\n",
+        "| 5   | 5      | 0 | NaN | NaN    |\n",
+        "| 6   | 6      | 0 | NaN | NaN    |\n",
+        "| 7   | 7      | 0 | NaN | NaN    |\n",
+        "| 8   | 8      | 0 | NaN | NaN    |\n",
+        "| 9   | 9      | 0 | NaN | NaN    |\n",
+        "| 10  | 10     | 0 | NaN | NaN    |\n",
+        "| 11  | 11     | 0 | NaN | NaN    |\n",
         "\u22ee\n",
-        "| 39  | 39     | 0 | NaN | NaN     |\n",
-        "| 40  | 40     | 0 | NaN | NaN     |\n",
-        "| 41  | 41     | 0 | NaN | NaN     |\n",
-        "| 42  | 42     | 0 | NaN | NaN     |\n",
-        "| 43  | 43     | 0 | NaN | NaN     |\n",
-        "| 44  | 44     | 0 | NaN | NaN     |\n",
-        "| 45  | 45     | 0 | NaN | NaN     |\n",
-        "| 46  | 46     | 0 | NaN | NaN     |\n",
-        "| 47  | 47     | 0 | 1.0 | 2.02919 |\n",
-        "| 48  | 48     | 0 | NaN | NaN     |\n",
-        "| 49  | 49     | 0 | NaN | NaN     |\n",
-        "| 50  | 50     | 0 | NaN | NaN     |"
+        "| 39  | 39     | 0 | NaN | NaN    |\n",
+        "| 40  | 40     | 0 | NaN | NaN    |\n",
+        "| 41  | 41     | 0 | NaN | NaN    |\n",
+        "| 42  | 42     | 0 | NaN | NaN    |\n",
+        "| 43  | 43     | 0 | 1.0 | 8.2336 |\n",
+        "| 44  | 44     | 0 | NaN | NaN    |\n",
+        "| 45  | 45     | 0 | NaN | NaN    |\n",
+        "| 46  | 46     | 0 | NaN | NaN    |\n",
+        "| 47  | 47     | 0 | NaN | NaN    |\n",
+        "| 48  | 48     | 0 | NaN | NaN    |\n",
+        "| 49  | 49     | 0 | NaN | NaN    |\n",
+        "| 50  | 50     | 0 | NaN | NaN    |"
        ]
       }
      ],
@@ -265,7 +265,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
       "for i = 2:pop_db1[end,1]\n",
       "    infect_recover(dist_mat_ab1, edb, \"continuous\", maximum(edb[:,3]), 5)\n",
@@ -273,29 +273,65 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "LoadError",
-       "evalue": "function find_state does not accept keyword arguments\nwhile loading In[10], in expression starting on line 1",
-       "output_type": "pyerr",
-       "traceback": [
-        "function find_state does not accept keyword arguments\nwhile loading In[10], in expression starting on line 1",
-        "",
-        " in infect_recover at /Users/justin/Dropbox/Projects/ilmtools/events.jl:136",
-        " in anonymous at no file:2"
-       ]
-      }
-     ],
-     "prompt_number": 10
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
+     "input": [
+      "edb"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<table class=\"data-frame\"><tr><th></th><th>ind_id</th><th>s</th><th>i</th><th>r</th></tr><tr><th>1</th><td>1</td><td>0</td><td>1.000000000003519</td><td>1.7726233626508563</td></tr><tr><th>2</th><td>2</td><td>0</td><td>1.0</td><td>1.0950529626733947</td></tr><tr><th>3</th><td>3</td><td>0</td><td>243084.86992134948</td><td>243084.9173457781</td></tr><tr><th>4</th><td>4</td><td>0</td><td>1.0000002125875114</td><td>1.024552686559765</td></tr><tr><th>5</th><td>5</td><td>0</td><td>1.0000016921324257</td><td>1.0707186078830064</td></tr><tr><th>6</th><td>6</td><td>0</td><td>1.0000000010307588</td><td>1.190196869868969</td></tr><tr><th>7</th><td>7</td><td>0</td><td>1.0</td><td>1.2874120439657306</td></tr><tr><th>8</th><td>8</td><td>0</td><td>1.000000000001919</td><td>1.1085204224062428</td></tr><tr><th>9</th><td>9</td><td>0</td><td>1.0</td><td>1.2954138849034347</td></tr><tr><th>10</th><td>10</td><td>0</td><td>1.0000002125866096</td><td>1.0639195524675162</td></tr><tr><th>11</th><td>11</td><td>0</td><td>1.0534934357893793</td><td>1.1526609244181207</td></tr><tr><th>12</th><td>12</td><td>0</td><td>1.0000000006866012</td><td>1.147081001240206</td></tr><tr><th>13</th><td>13</td><td>0</td><td>1.0000000010307593</td><td>1.2668452729671211</td></tr><tr><th>14</th><td>14</td><td>0</td><td>1.0000002125866096</td><td>1.0407658674994105</td></tr><tr><th>15</th><td>15</td><td>0</td><td>1.0000000000033602</td><td>1.0817358176341532</td></tr><tr><th>16</th><td>16</td><td>0</td><td>1.0000000000028635</td><td>1.052407200614873</td></tr><tr><th>17</th><td>17</td><td>0</td><td>1.0000000010307588</td><td>1.9218484160282507</td></tr><tr><th>18</th><td>18</td><td>0</td><td>1.0</td><td>1.0361605570329493</td></tr><tr><th>19</th><td>19</td><td>0</td><td>1.0000000000545954</td><td>1.0543590695211633</td></tr><tr><th>20</th><td>20</td><td>0</td><td>1.05349345315226</td><td>1.134874041663267</td></tr><tr><th>21</th><td>21</td><td>0</td><td>1.000000000003472</td><td>1.1794124404004769</td></tr><tr><th>22</th><td>22</td><td>0</td><td>1.0000000013184258</td><td>1.1007104744306508</td></tr><tr><th>23</th><td>23</td><td>0</td><td>1.000000000003472</td><td>1.4318159479734542</td></tr><tr><th>24</th><td>24</td><td>0</td><td>1.0</td><td>1.0041044527497212</td></tr><tr><th>25</th><td>25</td><td>0</td><td>1.0000000000033602</td><td>1.065978613098698</td></tr><tr><th>26</th><td>26</td><td>0</td><td>1.0000000013184258</td><td>1.3539225090592617</td></tr><tr><th>27</th><td>27</td><td>0</td><td>1.0</td><td>1.1844234274407839</td></tr><tr><th>28</th><td>28</td><td>0</td><td>1.0</td><td>1.0073140293161933</td></tr><tr><th>29</th><td>29</td><td>0</td><td>1.000000000001919</td><td>1.1506241629661347</td></tr><tr><th>30</th><td>30</td><td>0</td><td>1.0534939521026807</td><td>1.4180500796783955</td></tr><tr><th>&vellip;</th><td>&vellip;</td><td>&vellip;</td><td>&vellip;</td><td>&vellip;</td></tr></table>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "50x4 DataFrame\n",
+        "| Row | ind_id | s | i        | r        |\n",
+        "|-----|--------|---|----------|----------|\n",
+        "| 1   | 1      | 0 | 1.0      | 1.77262  |\n",
+        "| 2   | 2      | 0 | 1.0      | 1.09505  |\n",
+        "| 3   | 3      | 0 | 243085.0 | 243085.0 |\n",
+        "| 4   | 4      | 0 | 1.0      | 1.02455  |\n",
+        "| 5   | 5      | 0 | 1.0      | 1.07072  |\n",
+        "| 6   | 6      | 0 | 1.0      | 1.1902   |\n",
+        "| 7   | 7      | 0 | 1.0      | 1.28741  |\n",
+        "| 8   | 8      | 0 | 1.0      | 1.10852  |\n",
+        "| 9   | 9      | 0 | 1.0      | 1.29541  |\n",
+        "| 10  | 10     | 0 | 1.0      | 1.06392  |\n",
+        "| 11  | 11     | 0 | 1.05349  | 1.15266  |\n",
+        "\u22ee\n",
+        "| 39  | 39     | 0 | 1.0      | 1.28483  |\n",
+        "| 40  | 40     | 0 | 1.0      | 1.13763  |\n",
+        "| 41  | 41     | 0 | 1.0      | 1.0769   |\n",
+        "| 42  | 42     | 0 | 1.0      | 1.3225   |\n",
+        "| 43  | 43     | 0 | 1.0      | 8.2336   |\n",
+        "| 44  | 44     | 0 | 1.0      | 1.15724  |\n",
+        "| 45  | 45     | 0 | 1.0      | 1.34381  |\n",
+        "| 46  | 46     | 0 | 1.0      | 1.12123  |\n",
+        "| 47  | 47     | 0 | 1.0      | 1.0856   |\n",
+        "| 48  | 48     | 0 | 1.0      | 1.23557  |\n",
+        "| 49  | 49     | 0 | 1.0      | 1.65706  |\n",
+        "| 50  | 50     | 0 | 1.0      | 1.43668  |"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
+     "outputs": []
     }
    ],
    "metadata": {}
